--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,344 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-nav {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  
+  /* menu navigasi */
+  body {
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
+  }
+  
+  .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-}
-
-.nav-items {
-    list-style-type: none;
-}
-
-.nav-items li {
-    display: inline;
+  }
+  .logo-box {
+    float: left;
     margin-right: 20px;
-}
-
-header {
-    text-align: center;
-}
-
-header img {
-    max-width: 100%;
-    height: 300px;
-    margin-bottom: 40px;
-}
-
-.facilitations {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 40px;
-}
-
-.facilitations div{
-    text-align: center;
-}
-
-.circle {
+  }
+  .logo-box a {
+    outline: none;
+    display: block;
+  }
+  .logo-box img {
+    width: 100px;
+    height: 100%;
     width: 100px;
     height: 100px;
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 50%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+  }
+  nav {
+    overflow: hidden;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+  }
+  nav li {
+    display: inline-block;
+    margin-right: 25px;
+    height: 70px;
+    line-height: 70px;
+    transition: 0.5s linear;
+  }
+  nav a {
+    text-decoration: none;
+    display: block;
+    position: relative;
+    color: black;
+    text-transform: uppercase;
+  }
+  nav a:after {
+    content: "";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    background: #868686;
+    transition: width 0.5s linear;
+  }
+  nav a:hover:after {
+    width: 100%;
+  }
+  
+  /* header */
+  
+  header {
+    text-align: center;
+  }
+  
+  header img {
+    width: 100%;
+    height: 1000px;
+    margin-bottom: 20px;
+  }
+  
+  /* mulai slider */
+  * {
+    box-sizing: border-box;
+  }
+  body {
+    font-family: Verdana, sans-serif;
+  }
+  .mySlides {
+    display: none;
+  }
+  img {
+    vertical-align: middle;
+  }
+  
+  /* ABOUT ME */
+  .profile {
+    display: block;
+    padding-left: 20px;
+    padding-right: 20px;
+    align-content: normal;
+  }
+  
+  .background {
+    margin-top: 4px;
+    margin-bottom: 4px;
+  }
+  
+  .background li {
+    list-style-type: circle;
+  }
+  
+  .hobi {
+    margin-top: 40px;
+    margin-bottom: 4px;
+  }
+  .hobi li {
+    list-style-type: circle;
+  }
+  .dream {
+    margin-top: 40px;
+    margin-bottom: 4px;
+  }
+  .main {
+    color: red;
+    margin-top: 5px;
+    margin-bottom: 6px;
+  }
+  .how {
+    margin-top: 2px;
+    margin-bottom: 8px;
+  }
+  
+  .Quote {
+    margin-top: 40px;
+    margin-bottom: 4px;
+  }
+  .text {
+    color: goldenrod;
+    margin-top: 3px;
+    margin-bottom: 5px;
+  }
+  
+  /* LIFE GOAL */
+  .goal {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+    width: 100%;
+  }
+  
+  .goal div {
+    flex-basis: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  
+  .circle {
+    width: 100px;
+    height: 100px;
+    border: 3px solid black;
+    border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: inline-block; /* Added this line to make it inline */
+    margin-bottom: 8px; /* Adjusted margin for spacing */
+  }
+  
+  .circle:hover {
+    transform: scale(1.5);
+  }
+  
+  /* Contact */
+  .column {
+    display: flex;
+    column-gap: 2rem;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    justify-content: space-evenly;
+  }
+  .column > * {
+    width: calc(50%-1rem);
+  }
+  
+  input[type="text"],
+  select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type="date"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type="textarea"] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    height: 70px;
+  }
+  
+  input[type="submit"] {
+    width: 100%;
+    background-color: #4caf50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .submit,
+  .reset {
+    background-color: darkgoldenrod;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .submit:hover {
+    background-color: #04aa6d;
+    color: black;
+  }
+  
+  .reset:hover {
+    background-color: red;
+    color: black;
+  }
+  
+  .kotak {
+    background-color: whitesmoke;
+    border: 6px solid #cccc;
+    border-radius: 20px;
+    width: 500px;
+  }
+  
+  .Judul {
+    border-bottom: 6px solid #cccc;
+    padding: 10px;
+  }
+  
+  .Judul h4 {
+    text-align: center;
+  }
+  
+  /* footer */
+  .copyright {
+    float: left;
+    padding-left: 20px;
+  }
+  
+  /*RESPONSIVE*/
+  /* Responsive Navigation Bar */
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .nav-container ul {
+    flex-basis: 100%;
+    text-align: center;
+  }
+  
+  /* Responsive Header */
+  header {
+    text-align: center;
+  }
+  
+  header img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  header h1 {
+    font-size: 2rem;
+  }
+  
+  /* Responsive Slideshow */
+  .mySlides {
+    width: 100%;
+  }
+  
+  /* Responsive Profile Section */
+  .profile li,
+  .profile p {
+    font-size: 0.8rem;
+  }
+  
+  /* Responsive Life Goal Section */
+  .goal div {
+    flex-basis: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  
+  /* Responsive Message Me Section */
+  .column {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+  }
+  
+  .column div {
+    flex-basis: calc(50% - 1rem); /* Adjust the width to allow for spacing */
+    margin-bottom: 1rem;
+  }
+  
+  /* Responsive Footer */
+  #footer {
+    text-align: center;
+  }
+  
